--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-halo2_proofs = { git = "https://github.com/zkonduit/halo2", ref= "3d7b5e61b3052680ccb279e05bdcc21dd8a8fedf" }
+halo2_proofs = { git = "https://github.com/span14/halo2", branch="ezkl_sol_verifier" }
 askama = { version = "0.12.0", features = ["config"], default-features = false }
 hex = "0.4.3"
 ruint = "1.8.0"
@@ -20,7 +20,7 @@ revm = { version = "3.3.0", optional = true }
 [dev-dependencies]
 rand = "0.8.5"
 revm = "3.3.0"
-halo2_maingate  = { git = "https://github.com/zkonduit/halo2wrong", branch = "ac/chunked-mv-lookup", package = "maingate" }
+halo2_maingate  = { git = "https://github.com/span14/halo2wrong", branch = "ezkl", package = "maingate" }
 
 [features]
 default = []
